--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-redux": "^7.1.3",
     "react-saga": "^0.3.1",
     "react-scripts": "3.3.0",
+    "redux-thunk": "^2.3.0",
     "redux": "^4.0.5"
   },
   "scripts": {
