--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
-    "react-saga": "^0.3.1",
+    "redux-saga": "1.1.3",
     "react-scripts": "3.3.0",
     "redux-thunk": "^2.3.0",
     "redux": "^4.0.5"
