--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "redux-thunk": "^2.3.0",
     "redux": "^4.0.5"
   },
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.8"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
