--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "redux-saga": "1.1.3",
     "react-scripts": "3.3.0",
     "redux-thunk": "^2.3.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "axios": "^0.19.0"
   },
   "devDependencies": {
     "redux-devtools-extension": "^2.13.8"
